# Basic-Booking-app

./: README.md  docker-compose.yaml  pyproject.toml
core/: filters.py  serializers.py  tests.py  urls.py  views.py
docker/: Dockerfile  start.sh
reservations/: settings.py  urls.py
